--- a/src/resume/Resume.module.css
+++ b/src/resume/Resume.module.css
@@ -1,3 +1,11 @@
+.wrapper{
+    font-family: 'Century Gothic', 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Arial, sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+}
 .nameUser{
     margin: 0;
     font-size: 36px;
