--- a/src/resume/Resume.module.css
+++ b/src/resume/Resume.module.css
@@ -1,4 +1,3 @@
-
 .wrapper{
     font-family: 'Century Gothic', 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Arial, sans-serif;
@@ -16,7 +15,7 @@
 }
 .profession{
     font-weight: 500;
-    color: #000;
+    color: #002e58;
     margin: 0;
     margin-bottom: 30px;
 }
@@ -107,6 +106,7 @@
 .companyNameAndCity{
     font-size: 16px;
     color: #000;
+    font-style: italic;
 }
 .description{
     font-size: 16px;
@@ -119,10 +119,12 @@
     margin: 0 0 10px 0;
     color: #000;
     font-size: 16px;
+    font-style: italic;
 }
 .studyCity{
     margin: 0 0 10px 0;
     color: #000;
+    font-style: italic;
     font-size: 16px;
 }
 .dateStudy{
